--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1027,8 +1027,7 @@
     "task = task_sampler()\n",
     "xs = data_sampler.sample_xs(b_size=batch_size, n_points=conf.training.curriculum.points.end)\n",
     "ys = task.evaluate(xs)\n",
-    "task.w_b.shape, task.w_b\n",
-    "# task, xs.shape, ys.shape, n_dims, batch_size, conf.training.curriculum.points.end, conf.training.task_kwargs, model"
+    "task.w_b.shape, task.w_b"
    ]
   },
   {
@@ -1041,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 62,
    "id": "c3dc9cc8",
    "metadata": {},
    "outputs": [
@@ -1051,23 +1050,30 @@
        "(torch.Size([64, 31]),\n",
        " torch.Size([64, 31]),\n",
        " tensor(19),\n",
-       " tensor([[19, 13,  7,  ..., 15, 19, 17],\n",
-       "         [10, 11,  7,  ..., 10,  5, 15],\n",
-       "         [ 9,  2,  8,  ..., 14, 15,  0],\n",
+       " torch.Size([64, 101, 20]),\n",
+       " tensor([[13,  2,  3,  ...,  7, 13,  2],\n",
+       "         [ 9,  9, 10,  ...,  3,  5, 15],\n",
+       "         [ 9,  0, 12,  ...,  7,  1,  2],\n",
        "         ...,\n",
-       "         [10, 11,  6,  ..., 18, 13, 18],\n",
-       "         [11,  7,  6,  ...,  5,  3, 12],\n",
-       "         [12, 11, 10,  ...,  5, 12,  0]]),\n",
-       " tensor([[-0.6865, -0.6769,  1.1437,  ...,  0.5248, -0.3172,  0.6664],\n",
-       "         [-0.6968, -0.7596, -1.4454,  ..., -1.0199,  1.3162, -1.9831],\n",
-       "         [ 0.2976,  0.0639,  0.5976,  ...,  0.6933, -0.2964,  0.1811],\n",
+       "         [ 6,  8,  6,  ...,  5, 16, 18],\n",
+       "         [14,  9,  5,  ..., 17, 10, 17],\n",
+       "         [ 6, 12,  4,  ..., 13,  0,  9]]),\n",
+       " tensor([[ 5.7672e-01,  1.9426e-01, -1.5397e-01,  ..., -1.2631e+00,\n",
+       "           3.8137e-02, -6.9608e-01],\n",
+       "         [ 2.5633e-02,  2.7432e-01, -4.5330e-01,  ...,  1.2548e+00,\n",
+       "          -2.0031e-01, -6.4609e-01],\n",
+       "         [ 1.1942e-01,  1.0905e+00,  4.7174e-01,  ..., -8.2936e-01,\n",
+       "           7.3659e-01, -7.1968e-03],\n",
        "         ...,\n",
-       "         [-1.1135,  0.3578,  0.5434,  ..., -0.4656, -1.6283, -0.0720],\n",
-       "         [-1.8717, -1.9757, -1.2060,  ...,  0.8871, -0.2728,  0.1808],\n",
-       "         [-0.8285,  0.6820,  0.5623,  ...,  0.7807, -2.5213, -2.0589]]))"
+       "         [-7.1155e-01,  3.7499e-01, -1.3556e+00,  ...,  3.8970e-01,\n",
+       "           1.2132e+00,  1.3697e+00],\n",
+       "         [-8.8882e-04,  3.6636e-01, -1.0895e+00,  ...,  1.2274e+00,\n",
+       "           9.9446e-02,  4.7574e-01],\n",
+       "         [-1.2849e+00, -5.5020e-01, -4.7860e-01,  ..., -4.9383e-01,\n",
+       "           7.5262e-01,  4.3839e-01]]))"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,8 +1096,7 @@
     "task = task_sampler()\n",
     "xs = data_sampler.sample_xs(b_size=batch_size, n_points=conf.training.curriculum.points.end)\n",
     "ys = task.evaluate(xs)\n",
-    "task.dt_tensor.shape, task.target_tensor.shape, task.dt_tensor.max(), task.dt_tensor, task.target_tensor\n",
-    "# task, xs.shape, ys.shape, n_dims, batch_size, conf.training.curriculum.points.end, conf.training.task_kwargs, model\n",
+    "task.dt_tensor.shape, task.target_tensor.shape, task.dt_tensor.max(), xs.shape, task.dt_tensor, task.target_tensor\n",
     "# size=2 ** (depth + 1) - 1,"
    ]
   },
@@ -1130,31 +1135,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "a06586c5",
+   "execution_count": 81,
+   "id": "048f8004",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(torch.Size([64, 101]),\n",
-       " tensor([[ 1.0250,  0.6664, -0.2336,  ...,  0.7482, -1.1243,  0.5248],\n",
-       "         [ 0.3321, -0.3024,  0.0787,  ...,  1.1819, -0.3695, -2.8418],\n",
-       "         [ 0.0522,  0.0522,  0.3291,  ...,  0.3291, -2.3857,  1.5074],\n",
+       "(torch.Size([64, 101, 20]),\n",
+       " torch.Size([64, 101]),\n",
+       " tensor([[-0.6818,  0.0967, -1.1168,  ..., -0.6581,  0.9676,  0.0361],\n",
+       "         [-0.0084,  1.2548,  0.5174,  ..., -0.6461,  0.5174,  1.9744],\n",
+       "         [-0.1243, -1.1661, -0.0072,  ..., -0.0072,  1.4697,  0.7366],\n",
        "         ...,\n",
-       "         [-0.5631, -0.5631,  0.0716,  ...,  1.0705, -0.5631, -0.4656],\n",
-       "         [ 0.8871,  0.1808,  1.7168,  ...,  1.7168,  0.1808,  1.0266],\n",
-       "         [-1.2016,  0.0227,  2.0210,  ..., -2.0589, -1.2016, -0.1585]]))"
+       "         [-0.3877,  0.3897,  0.4292,  ...,  1.3697,  0.4292,  1.3697],\n",
+       "         [ 0.9830,  0.9595,  1.2274,  ...,  0.9595,  0.4757,  0.4754],\n",
+       "         [ 0.7526, -1.1389,  0.4384,  ...,  1.4907, -0.7445, -1.1389]]))"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ys = task.evaluate(xs)\n",
-    "ys.shape, ys"
+    "xs.shape, ys.shape, ys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "0ae2ccc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([101, 20]),\n",
+       " tensor([[False,  True, False,  ...,  True, False,  True],\n",
+       "         [False, False, False,  ...,  True,  True,  True],\n",
+       "         [False, False,  True,  ...,  True,  True, False],\n",
+       "         ...,\n",
+       "         [ True,  True,  True,  ..., False, False,  True],\n",
+       "         [ True,  True,  True,  ...,  True, False, False],\n",
+       "         [False,  True, False,  ..., False,  True,  True]]),\n",
+       " tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "         0, 0, 0, 0, 0]),\n",
+       " torch.Size([101]),\n",
+       " tensor([13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13,\n",
+       "         13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13,\n",
+       "         13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13,\n",
+       "         13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13,\n",
+       "         13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13,\n",
+       "         13, 13, 13, 13, 13, 13, 13, 13, 13, 13, 13]),\n",
+       " tensor([False,  True, False,  True, False,  True, False, False, False,  True,\n",
+       "          True,  True, False, False,  True, False, False, False, False, False,\n",
+       "          True, False, False,  True, False,  True, False,  True, False, False,\n",
+       "         False, False, False,  True,  True,  True,  True, False,  True, False,\n",
+       "          True,  True, False, False,  True, False, False,  True, False, False,\n",
+       "          True, False, False,  True, False, False,  True, False,  True,  True,\n",
+       "          True, False, False, False, False,  True,  True,  True,  True,  True,\n",
+       "         False, False, False, False,  True,  True,  True,  True, False, False,\n",
+       "         False, False,  True,  True, False, False, False,  True,  True,  True,\n",
+       "          True,  True, False, False,  True,  True, False, False, False, False,\n",
+       "         False]))"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "xs_bool = xs[i] > 0\n",
+    "dt = task.dt_tensor[i]\n",
+    "\n",
+    "# For loop\n",
+    "cur_nodes = torch.zeros(xs.shape[1], device=xs.device).long()\n",
+    "cur_coords = dt[cur_nodes]\n",
+    "cur_decisions = xs_bool[torch.arange(xs_bool.shape[0]), cur_coords]\n",
+    "# cur_nodes = 2 * cur_nodes + 1 + cur_decisions\n",
+    "\n",
+    "xs_bool.shape, xs_bool, cur_nodes, cur_coords.shape, cur_coords, cur_decisions"
    ]
   },
   {
@@ -1299,8 +1366,7 @@
     "task = task_sampler()\n",
     "xs = data_sampler.sample_xs(b_size=batch_size, n_points=conf.training.curriculum.points.end)\n",
     "ys = task.evaluate(xs)\n",
-    "task.W1.shape, task.W2.shape, task.W1, task.W2\n",
-    "# task, xs.shape, ys.shape, n_dims, batch_size, conf.training.curriculum.points.end, conf.training.task_kwargs, model"
+    "task.W1.shape, task.W2.shape, task.W1, task.W2"
    ]
   }
  ],
